# PhysicsSimulations

./: AnyRandomGraph.cpp  CMakeLists.txt  Matrix.cpp  Matrix.hpp  README.md  SampleRateConversion.cpp  SemiclassicalOscillation.cpp  besselsFunction.cpp  brownianMotion.cpp  burgersEquation.cpp  calculate_integrals.cpp  convolutionAndCrossCorelation.cpp  courseTask.cpp  covid19.cpp  crankNicolsonMethod.cpp  degenerateNucleusMethod.cpp  diffEquation1.cpp  discreteFouriertransform.cpp  dla.cpp  frac.cpp  gnuplot.h  highFrequencyFilter.cpp  interpolationPolinom.cpp  inverseIteration.cpp  julia_set.cpp  koshiProblem.cpp  linearDifferentialEquation.cpp  lowFrequaencyFilter.cpp  machine_epsilon.cpp  main.cpp  mymath.cpp  mymath.h  notchFilter.cpp  pointsFraq.cpp  potential.cpp  predatorPrey.cpp  rigidSystem.cpp  salute.cpp  schrodinger_equation.cpp  settings.h  (+6 more)
gnuplot/demo/: airfoil.dem  fillcrvs.dem  multiplt.dem  spline.dem  transparent.dem
gnuplot/docs/: ChangeLog
gnuplot/share/lua/: gnuplot-tikz.lua
test/: tests.cpp
